Add ChatClient configuration and update AI model settings in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=gen-ai-demo
-spring.ai.ollama.chat.model=llama3.2
+spring.ai.ollama.chat.options.temperature=0.7
+spring.ai.ollama.chat.options.num-predict=1000
 server.port=9087
+spring.ai.ollama.chat.model=gemma3:1b
