Add ChatClient configuration and update AI model settings in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,63 @@
-spring.application.name=gen-ai-demo
+# Application Configuration
+spring.application.name=banking-gen-ai-demo
+server.port=8080
+
+# Database Configuration (H2 for development, PostgreSQL for production)
+spring.datasource.url=jdbc:h2:mem:bankingdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# Spring AI Ollama Configuration
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.chat.model=llama3.2:3b
 spring.ai.ollama.chat.options.temperature=0.7
-spring.ai.ollama.chat.options.num-predict=1000
-server.port=9087
-spring.ai.ollama.chat.model=gemma3:1b
+spring.ai.ollama.chat.options.num-predict=2000
+spring.ai.ollama.chat.options.top-p=0.9
+
+# Spring AI Ollama Embeddings Configuration
+# Note: Spring AI auto-configures EmbeddingModel from these properties
+spring.ai.ollama.embedding.model=nomic-embed-text
+spring.ai.ollama.embedding.options.temperature=0.0
+# Alternative embedding models: all-minilm, mxbai-embed-large, etc.
+
+# Vector Store Configuration
+spring.ai.vectorstore.type=simple
+# Options: simple, pgvector, pinecone, weaviate, chroma
+# For PostgreSQL with pgvector, use: spring.ai.vectorstore.type=pgvector
+
+# Pinecone Configuration (optional)
+# spring.ai.vectorstore.pinecone.api-key=your-api-key
+# spring.ai.vectorstore.pinecone.environment=us-west1-gcp
+# spring.ai.vectorstore.pinecone.index-name=banking-knowledge
+
+# Weaviate Configuration (optional)
+# spring.ai.vectorstore.weaviate.scheme=http
+# spring.ai.vectorstore.weaviate.host=localhost
+# spring.ai.vectorstore.weaviate.port=8080
+
+# Chroma Configuration (optional)
+# spring.ai.vectorstore.chroma.host=localhost
+# spring.ai.vectorstore.chroma.port=8000
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+
+# Logging Configuration
+logging.level.com.example=INFO
+logging.level.org.springframework.ai=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Retry Configuration
+spring.retry.max-attempts=3
+spring.retry.initial-interval=1000
+spring.retry.multiplier=2.0
+spring.retry.max-interval=5000
