--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Spring AI Ollama Configuration
 spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.model=llama3.2:3b
+# Use llama3.2:latest if llama3.2:3b is not available
+spring.ai.ollama.chat.model=llama3.2:latest
 spring.ai.ollama.chat.options.temperature=0.7
 spring.ai.ollama.chat.options.num-predict=2000
 spring.ai.ollama.chat.options.top-p=0.9
